--- a/xdgboost_learn.ipynb
+++ b/xdgboost_learn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('./datasets/GLRLM_Features.csv', sep=',', index_col=0).sample(frac=1)"
+    "\n"
    ]
   },
   {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -65,39 +65,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>22</th>\n",
        "      <td>0.044628</td>\n",
        "      <td>489944.305556</td>\n",
        "      <td>12438.263889</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>0.011952</td>\n",
-       "      <td>510244.582278</td>\n",
-       "      <td>9130.392405</td>\n",
-       "      <td>0</td>\n",
+       "      <th>62</th>\n",
+       "      <td>0.067959</td>\n",
+       "      <td>44852.065574</td>\n",
+       "      <td>3238.032787</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>0.011952</td>\n",
-       "      <td>510244.582278</td>\n",
-       "      <td>9130.392405</td>\n",
-       "      <td>0</td>\n",
+       "      <th>23</th>\n",
+       "      <td>0.009018</td>\n",
+       "      <td>467273.916667</td>\n",
+       "      <td>4284.229167</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0.011952</td>\n",
-       "      <td>510244.582278</td>\n",
-       "      <td>9130.392405</td>\n",
-       "      <td>0</td>\n",
+       "      <th>24</th>\n",
+       "      <td>0.029504</td>\n",
+       "      <td>298230.785124</td>\n",
+       "      <td>14985.892562</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>0.011952</td>\n",
-       "      <td>510244.582278</td>\n",
-       "      <td>9130.392405</td>\n",
-       "      <td>0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>0.019768</td>\n",
+       "      <td>374751.235294</td>\n",
+       "      <td>7092.176471</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -105,14 +105,14 @@
       ],
       "text/plain": [
        "        LGRE           HGRE          GLNU  isPatho\n",
-       "11  0.044628  489944.305556  12438.263889        1\n",
-       "52  0.011952  510244.582278   9130.392405        0\n",
-       "78  0.011952  510244.582278   9130.392405        0\n",
-       "14  0.011952  510244.582278   9130.392405        0\n",
-       "44  0.011952  510244.582278   9130.392405        0"
+       "22  0.044628  489944.305556  12438.263889      1.0\n",
+       "62  0.067959   44852.065574   3238.032787      0.0\n",
+       "23  0.009018  467273.916667   4284.229167      1.0\n",
+       "24  0.029504  298230.785124  14985.892562      1.0\n",
+       "4   0.019768  374751.235294   7092.176471      1.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,28 +123,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 78.57%\n"
+     ]
+    }
+   ],
    "source": [
+    "dataset = pd.read_csv('./datasets/glrlm_0.csv', sep=',', index_col=0).sample(frac=1)\n",
+    "\n",
     "X = dataset.iloc[:, 1:-1]\n",
-    "Y = dataset.iloc[:, -1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Y = dataset.iloc[:, -1]\n",
+    "\n",
     "seed = 7\n",
-    "test_size = 0.33\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)"
+    "test_size = 0.2\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "\n",
+    "model = XGBClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "predictions = [round(value) for value in y_pred]\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -158,36 +177,30 @@
        "       silent=True, subsample=1)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "model = XGBClassifier()\n",
-    "model.fit(X_train, y_train)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "y_pred = model.predict(X_test)\n",
-    "predictions = [round(value) for value in y_pred]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 100.00%\n"
+      "Accuracy: 78.26%\n"
      ]
     }
    ],
@@ -195,6 +208,13 @@
     "accuracy = accuracy_score(y_test, predictions)\n",
     "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -220,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
