--- a/xdgboost_learn.ipynb
+++ b/xdgboost_learn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,122 +33,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>LGRE</th>\n",
-       "      <th>HGRE</th>\n",
-       "      <th>GLNU</th>\n",
-       "      <th>isPatho</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>0.044628</td>\n",
-       "      <td>489944.305556</td>\n",
-       "      <td>12438.263889</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>0.067959</td>\n",
-       "      <td>44852.065574</td>\n",
-       "      <td>3238.032787</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>0.009018</td>\n",
-       "      <td>467273.916667</td>\n",
-       "      <td>4284.229167</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>0.029504</td>\n",
-       "      <td>298230.785124</td>\n",
-       "      <td>14985.892562</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.019768</td>\n",
-       "      <td>374751.235294</td>\n",
-       "      <td>7092.176471</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        LGRE           HGRE          GLNU  isPatho\n",
-       "22  0.044628  489944.305556  12438.263889      1.0\n",
-       "62  0.067959   44852.065574   3238.032787      0.0\n",
-       "23  0.009018  467273.916667   4284.229167      1.0\n",
-       "24  0.029504  298230.785124  14985.892562      1.0\n",
-       "4   0.019768  374751.235294   7092.176471      1.0"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 78.57%\n"
+      "Accuracy: 96.00%\n"
      ]
     }
    ],
    "source": [
-    "dataset = pd.read_csv('./datasets/glrlm_0.csv', sep=',', index_col=0).sample(frac=1)\n",
-    "\n",
-    "X = dataset.iloc[:, 1:-1]\n",
+    "dataset = pd.read_csv('./datasets/glrlm_0_sep_diseases.csv', sep=',', index_col=0).sample(frac=1)\n",
+    "dataset = dataset[dataset['isPatho'] <= 1]\n",
+    "X = dataset.iloc[:, :-1]\n",
     "Y = dataset.iloc[:, -1]\n",
     "\n",
-    "seed = 7\n",
-    "test_size = 0.2\n",
+    "seed = 123\n",
+    "test_size = 0.33\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
     "\n",
     "model = XGBClassifier()\n",
@@ -163,49 +82,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-       "       colsample_bytree=1, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
-       "       max_depth=3, min_child_weight=1, missing=None, n_estimators=100,\n",
-       "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
-       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
-       "       silent=True, subsample=1)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 78.26%\n"
+      "Accuracy: 93.33%\n"
      ]
     }
    ],
    "source": [
-    "accuracy = accuracy_score(y_test, predictions)\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "dataset = pd.read_csv('./datasets/glrlm_0_sep_diseases.csv', sep=',', index_col=0).sample(frac=1)\n",
+    "dataset = dataset[dataset['isPatho'] <= 1]\n",
+    "\n",
+    "X = dataset.iloc[:, :-1]\n",
+    "Y = dataset.iloc[:, -1]\n",
+    "seed = 123\n",
+    "test_size = 0.4\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "neig = KNeighborsClassifier(n_neighbors=5)\n",
+    "neig.fit(X_train, y_train)\n",
+    "prob = neig.predict_proba(X_test)\n",
+    "pred = neig.predict(X_test)\n",
+    "# print(prob)\n",
+    "# print(pred)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, neig.predict(X_test))\n",
+    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 86.67%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "dataset = pd.read_csv('./datasets/glrlm_0_sep_diseases.csv', sep=',', index_col=0).sample(frac=1)\n",
+    "dataset = dataset[dataset['isPatho'] <= 1]\n",
+    "\n",
+    "X = dataset.iloc[:, 1:-1]\n",
+    "Y = dataset.iloc[:, -1]\n",
+    "seed = 123\n",
+    "test_size = 0.2\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "clf = svm.SVC(gamma='scale')\n",
+    "clf.fit(X_train, y_train)\n",
+    "accuracy = accuracy_score(y_test, clf.predict(X_test))\n",
+    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 93.33%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "dataset = pd.read_csv('./datasets/glrlm_0_sep_diseases.csv', sep=',', index_col=0).sample(frac=1)\n",
+    "dataset = dataset[dataset['isPatho'] <= 1]\n",
+    "\n",
+    "X = dataset.iloc[:, 1:-1]\n",
+    "Y = dataset.iloc[:, -1]\n",
+    "seed = 123\n",
+    "test_size = 0.2\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "clf = svm.SVC(kernel='linear')\n",
+    "clf.fit(X_train, y_train)\n",
+    "accuracy = accuracy_score(y_test, clf.predict(X_test))\n",
     "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
    ]
   },
@@ -214,7 +177,93 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "predicted = clf.predict(X_test)\n",
+    "\n",
+    "def calc_accuracy(predicted, y_test):\n",
+    "    if len(predicted) != len(y_test):\n",
+    "        print(\"Function parameters must be the same size!\")\n",
+    "        return\n",
+    "\n",
+    "    true_answers = sum(int(predicted[i] == y_test[i]) for i in range(len(y_test)))\n",
+    "    \n",
+    "    return float(true_answers/float(len(y_test)))\n",
+    "\n",
+    "calc_accuracy(predicted, y_test.values)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m--------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                    Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-363a0a0b567c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mseed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m123\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mtest_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0msvc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msvm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSVC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkernel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'linear'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m.004\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0msvc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn import svm\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "dataset = pd.read_csv('./datasets/glrlm_0_unit.csv', sep=',', index_col=0).sample(frac=1)\n",
+    "\n",
+    "seed = 123\n",
+    "test_size = 0.2\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "svc = svm.SVC(kernel='linear', gamma=.004, C=100)\n",
+    "svc.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_csv('./datasets/glrlm_0_unit.csv', sep=',', index_col=0).sample(frac=1)\n",
+    "X = dataset.iloc[:, 1:-1]\n",
+    "Y = dataset.iloc[:, -1]\n",
+    "\n",
+    "seed = 123\n",
+    "test_size = 0.2\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = svm.SVC(gamma='scale')\n",
+    "clf.fit(X, y)\n",
+    "clf = svm.SVC(gamma='scale')\n",
+    "clf.fit(X_train, y_train) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train"
+   ]
   },
   {
    "cell_type": "code",
@@ -240,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
