Model weights calculation and saving to separate files

--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -543,32 +543,175 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Support Vector Machine"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn import svm\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.externals import joblib\n",
+    "\n",
+    "\n",
+    "dataset = pd.read_csv('./datasets/glrlm_0_sep_diseases.csv', sep=',', index_col=0).sample(frac=1)\n",
+    "\n",
+    "labels = ['Dyscholia', 'Hepatitis B', 'Hepatitis C', 'Wilson\\'s Disease', 'Autoimmune Hepatitis']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.00%\n"
+      "Norma + Dyscholia Accuracy: 94.74%\n"
      ]
     }
    ],
    "source": [
-    "from sklearn import svm\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "dataset = pd.read_csv('./datasets/glrlm_0_sep_diseases.csv', sep=',', index_col=0).sample(frac=1)\n",
-    "dataset = dataset[dataset['isPatho'] <= 2]\n",
-    "X = dataset.iloc[:, :-1]\n",
-    "Y = dataset.iloc[:, -1]\n",
+    "dataset_n_dsh = dataset[(dataset['isPatho'] == 0) | (dataset['isPatho'] == 1)]\n",
+    "X = dataset_n_dsh.iloc[:, :-1]\n",
+    "Y = dataset_n_dsh.iloc[:, -1]\n",
     "seed = 123\n",
-    "test_size = 0.2\n",
+    "test_size = 0.25\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
-    "svc = svm.SVC(gamma='scale', decision_function_shape='ovo')\n",
-    "svc.fit(X_train, y_train)\n",
-    "accuracy = accuracy_score(y_test, clf.predict(X_test))\n",
-    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
+    "n_dsh_svc = svm.SVC(gamma='scale', probability=True)\n",
+    "n_dsh_svc.fit(X_train, y_train)\n",
+    "accuracy = accuracy_score(y_test, n_dsh_svc.predict(X_test))\n",
+    "print(\"Norma + Dyscholia Accuracy: %.2f%%\" % (accuracy * 100.0))\n",
+    "\n",
+    "joblib.dump(n_dsh_svc, './models/svm_norma_dsh.pkl')\n",
+    "pickle.dump(n_dsh_svc, open('./models/svm_norma_dsh.sav', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Norma + Hepatitis B Accuracy: 90.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_n_gpb = dataset[(dataset['isPatho'] == 0) | (dataset['isPatho'] == 2)]\n",
+    "X = dataset_n_gpb.iloc[:, :-1]\n",
+    "Y = dataset_n_gpb.iloc[:, -1]\n",
+    "seed = 123\n",
+    "test_size = 0.25\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "n_gpb_svc = svm.SVC(gamma='scale', probability=True)\n",
+    "n_gpb_svc.fit(X_train, y_train)\n",
+    "accuracy = accuracy_score(y_test, n_gpb_svc.predict(X_test))\n",
+    "print(\"Norma + Hepatitis B Accuracy: %.2f%%\" % (accuracy * 100.0))\n",
+    "\n",
+    "joblib.dump(n_gpb_svc, './models/svm_norma_gpb.pkl')\n",
+    "pickle.dump(n_gpb_svc, open('./models/svm_norma_gpb.sav', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Norma + Hepatitis C Accuracy: 85.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_n_gpc = dataset[(dataset['isPatho'] == 0) | (dataset['isPatho'] == 3)]\n",
+    "X = dataset_n_gpc.iloc[:, :-1]\n",
+    "Y = dataset_n_gpc.iloc[:, -1]\n",
+    "seed = 123\n",
+    "test_size = 0.25\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "n_gpc_svc = svm.SVC(gamma='scale', probability=True)\n",
+    "n_gpc_svc.fit(X_train, y_train)\n",
+    "accuracy = accuracy_score(y_test, n_gpc_svc.predict(X_test))\n",
+    "print(\"Norma + Hepatitis C Accuracy: %.2f%%\" % (accuracy * 100.0))\n",
+    "\n",
+    "joblib.dump(n_gpc_svc, './models/svm_norma_gpc.pkl')\n",
+    "pickle.dump(n_gpc_svc, open('./models/svm_norma_gpc.sav', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Norma + Wilson's Disease Accuracy: 94.74%\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_n_vls = dataset[(dataset['isPatho'] == 0) | (dataset['isPatho'] == 4)]\n",
+    "X = dataset_n_vls.iloc[:, :-1]\n",
+    "Y = dataset_n_vls.iloc[:, -1]\n",
+    "seed = 12\n",
+    "test_size = 0.25\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "n_vls_svc = svm.SVC(gamma='scale', probability=True)\n",
+    "n_vls_svc.fit(X_train, y_train)\n",
+    "accuracy = accuracy_score(y_test, n_vls_svc.predict(X_test))\n",
+    "print(\"Norma + Wilson\\'s Disease Accuracy: %.2f%%\" % (accuracy * 100.0))\n",
+    "\n",
+    "joblib.dump(n_vls_svc, './models/svm_norma_vls.pkl')\n",
+    "pickle.dump(n_vls_svc, open('./models/svm_norma_vls.sav', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Norma + Autoimmune Hepatitis Accuracy: 94.74%\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_n_auh = dataset[(dataset['isPatho'] == 0) | (dataset['isPatho'] == 5)]\n",
+    "X = dataset_n_auh.iloc[:, :-1]\n",
+    "Y = dataset_n_auh.iloc[:, -1]\n",
+    "seed = 1111\n",
+    "test_size = 0.25\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
+    "n_auh_svc = svm.SVC(gamma='scale', probability=True)\n",
+    "n_auh_svc.fit(X_train, y_train)\n",
+    "accuracy = accuracy_score(y_test, n_auh_svc.predict(X_test))\n",
+    "print(\"Norma + Autoimmune Hepatitis Accuracy: %.2f%%\" % (accuracy * 100.0))\n",
+    "\n",
+    "joblib.dump(n_auh_svc, './models/svm_norma_auh.pkl')\n",
+    "pickle.dump(n_auh_svc, open('./models/svm_norma_auh.sav', 'wb'))"
    ]
   },
   {
